--- a/Spanish_Wine_Quality.ipynb
+++ b/Spanish_Wine_Quality.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Uw--TmCKycBdtvIC4SAZP0O1WUyOV4Ac",
-      "authorship_tag": "ABX9TyMESVzNEAcKpQMhJ3dmIgAZ",
+      "authorship_tag": "ABX9TyMq3+kJG0eDoQUuotvqWsbm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,6 +52,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Target:\n",
+        "\n",
+        "### The target variable of this dataset is the quality of the wine. "
+      ],
+      "metadata": {
+        "id": "1V04Xi2psO8S"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Regression or Classification?\n",
         "\n",
         "This will be treated as a regression problem. \n",
@@ -60,26 +71,6 @@
       ],
       "metadata": {
         "id": "i2jW5-dGoIGN"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Target:\n",
-        "\n",
-        "### The target variable of this dataset is the quality of the wine. "
-      ],
-      "metadata": {
-        "id": "aBBHuX1sfLSR"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Type of problem?"
-      ],
-      "metadata": {
-        "id": "xISp-qvQfYKY"
       }
     },
     {
@@ -106,7 +97,7 @@
         "id": "e0gTl2vRflBV",
         "outputId": "56e58a94-335f-40e9-aac3-710a9d3f8a4e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +134,7 @@
         "id": "gadWUed2folY",
         "outputId": "4f30fcbc-515e-46c7-f112-eff079e8cd3e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +159,7 @@
         "id": "ZEmoAjU7frdf",
         "outputId": "ae2f66ac-2372-4092-d544-f89ea74608fa"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,7 +252,7 @@
         "id": "uK_0jCFWpE5n",
         "outputId": "fcf0f2e6-7b7f-4da9-d747-0f0f3dce839d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
